syntax = "proto3";

package management;
option go_package = "gitlab.com/pietroski-software-company/lightning-db/lightning-node/go-lightning-node/schemas/generated/go/management;grpc_mngmt";

import "management/management_messages.proto";
//import "google/api/annotations.proto";

service Management {
  rpc CreateStore(CreateStoreRequest) returns(CreateStoreResponse) {
//    option (google.api.http) = {
//      post: "/v1/manager/"
//      body: "*"
//    };
  };
  rpc UpdateStore(UpdateStoreRequest) returns(UpdateStoreResponse);
  rpc DeleteStore(DeleteStoreRequest) returns(DeleteStoreResponse);
  rpc ListStores(ListStoresRequest) returns(ListStoresResponse);
  rpc GetStore(GetStoreRequest) returns(GetStoreResponse);

  rpc RestartLightningNode(RestartLightningNodeRequest)
      returns(RestartLightningNodeResponse);
  rpc ShutdownLightningNode(ShutdownLightningNodeRequest)
      returns(ShutdownLightningNodeResponse);
}
